Edited all SA 1 sutras, adding SA 1.153, 159-161, 163.

--- a/01_agama/samyukta/01/SA1_10.md
+++ b/01_agama/samyukta/01/SA1_10.md
@@ -14,13 +14,13 @@ next: SA1_11.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “When you delight in form, you delight in suffering. Delighting in suffering, you can’t be liberated from suffering. Thus, when you delight in feeling … perception … volition … consciousness, you delight in suffering. Delighting in suffering, you can’t be liberated from suffering.
+2\. It was then that the Bhagavān addressed the monks, “When you delight in form, you delight in suffering. Delighting in suffering, it’s not possible to be liberated from suffering. Thus, when you delight in feeling … perception … volition … consciousness, you delight in suffering. Delighting in suffering, it’s not possible to be liberated from suffering.
 {:#p2}
 
-3\. “Monks, when you don’t delight in form, you don’t delight in suffering. Not delighting in suffering, you can be liberated from suffering. Thus, when you don’t delight in feeling … perception … volition … consciousness, you don’t delight in suffering. Not delighting in suffering, you can be liberated from suffering.”
+3\. “Monks, when you don’t delight in form, you don’t delight in suffering. Not delighting in suffering, it’s possible to be liberated from suffering. Thus, when you don’t delight in feeling … perception … volition … consciousness, you don’t delight in suffering. Not delighting in suffering, it’s possible to be liberated from suffering.”
 {:#p3}
 
-4\. The monks who heard what the Buddha taught then rejoiced and approved.
+4\. When the monks heard what the Buddha taught, they rejoiced and approved.
 {:#p4}
 
 ###### Summary Verse
@@ -36,7 +36,7 @@ And [10] delighting in form.
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 19 September 2020
+Last Revised: 6 April 2021
 {: .revised}
 
 ---
