--- a/01_agama/samyukta/01/SA1_138.md
+++ b/01_agama/samyukta/01/SA1_138.md
@@ -11,60 +11,68 @@ next: SA1_143.html
 ## [1. The Aggregates](index.html)
 ### 138. Pūraṇa
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at the multi-story meeting hall beside Markaṭa Lake of Vaiśālī.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at the two-story meeting hall beside Markaṭa Lake of Vaiśālī.
 {:#p1}
 
-2\. It was then that there was a Licchavi named Mahānāma who traveled for days to visit the Buddha.
+2\. It was then that there was a Licchavi named Mahānāma[\[2\]](#n2){:#ref2} who traveled daily to visit the Buddha.
 {:#p2}
 
-3\. That Licchavi man thought to himself, ‘If I visit the Bhagavān in the morning, both the Bhagavān and the monks who are my friends will all be meditating. I’ll go visit the ājīvika heretics at Seven Mango Trees.” So, he went to visit Pūraṇa Kāśyapa at his residence.
+3\. That Licchavi man thought to himself, ‘If I visit the Bhagavān in the morning, both the Bhagavān and the monks who are my friends will all be meditating. I’ll go visit the ājīvika heretics at Seven Mango Trees.” He then went to visit Pūraṇa Kāśyapa at his residence.
 {:#p3}
 
-4\. Pūraṇa Kāśyapa was the leader of a heretical assembly. He was surrounded front and back by five hundred disciples who were loud and boisterous as they discussed ordinary affairs.
+4\. Pūraṇa Kāśyapa was the leader of an assembly of another tradition. He was surrounded front and back by five hundred disciples who were loud and boisterous as they discussed ordinary affairs.
 {:#p4}
 
-5\. When he saw the Licchavi Mahānāma coming from a distance, Pūraṇa Kāśyapa told his followers to settle down: “Quiet, all of you! This Licchavi Mahānāma is a disciple of the ascetic Gautama. These white-robed disciples of the ascetic Gautama are high-ranking people in Vaiśālī. They always delight in tranquility, praise tranquility, and they visit tranquil assemblies; therefore, all of you must be tranquil.”
+5\. When he saw the Licchavi Mahānāma coming from a distance, Pūraṇa Kāśyapa told his followers to settle down: “Quiet, all of you! This Licchavi Mahānāma is a disciple of the ascetic Gautama. This white-robed disciple of the ascetic Gautama is a high-ranking person in Vaiśālī. He always delights in peacefulness, praises peacefulness, and visits peaceful assemblies; therefore, all of you must be peaceful.”
 {:#p5}
 
 6\. Mahānāma then paid a visit to Pūraṇa’s assembly, and he exchanged greetings with Pūraṇa. After listening to his troubles, Mahānāma withdrew to sit at one side.
 {:#p6}
 
-7\. Mahānāma said to Pūraṇa, “I’ve heard that Pūraṇa teaches his disciples this: ‘There’s no cause or condition by which sentient beings are defiled, and there’s no cause or condition by which sentient beings are purified.’ The world has these theories. Has it been put forward by you, or are these words used by others to slander you? In the judgement of worldly people, is this Dharma or what’s not Dharma? Haven’t there been worldly people who’ve discussed it with you, questioned it critically, and rejected it?”
+7\. Mahānāma said to Pūraṇa, “I’ve heard that Pūraṇa teaches his disciples this: ‘There’s no cause or condition by which sentient beings are defiled, and there’s no cause or condition by which sentient beings are purified.’ The world has these theories. Has it been put forward by you, or are these words used by those of other traditions to slander you? In the judgement of worldly people, is this Dharma or what’s not Dharma? Haven’t there been worldly people who’ve discussed it with you, questioned it critically, and rejected it?”
 {:#p7}
 
-8\. Pūraṇa Kāśyapa said, “I really have this theory; it isn’t a worldly misrepresentation. I established this theory as a theory that accords with Dharma. I teach this Dharma, and they follow the Dharma. There aren’t any worldly people who come to question it critically and reject it. Why is that? Mahānāma, I thus see and thus teach, ‘There’s no cause or condition by which sentient beings are defiled, and there’s no cause or condition by which sentient beings are purified.’”
+Pūraṇa Kāśyapa said, “I really have this theory; it isn’t a worldly misrepresentation. I established this theory as a theory that accords with Dharma. I teach this Dharma, and they follow the Dharma. There aren’t any worldly people who come to question it critically and reject it. Why is that? Mahānāma, I thus see and thus teach, ‘There’s no cause or condition by which sentient beings are defiled, and there’s no cause or condition by which sentient beings are purified.’”
+
+
+8\. After he heard what Pūraṇa said, Mahānāma wasn’t delighted and felt insulted, so he got up from his seat and left. He went to the Bhagavān, bowed his head at his feet, and withdrew to sit to one side. He then recounted his conversation with Pūraṇa to the Buddha in detail.
 {:#p8}
 
-9\. After he heard what Pūraṇa said, Mahānāma wasn’t delighted and felt insulted, so he got up from his seat and left. He went to the Bhagavān, bowed his head at his feet, and withdrew to sit to one side. He then recounted his conversation with Pūraṇa to the Buddha in detail.
+9\. The Buddha told the Licchavi Mahānāma, “That Pūraṇa speaks from intellect, which isn’t enough to decide [the matter]. Thus, Pūraṇa is foolish, undiscerning, and unskillful. He has no cause to say, ‘There’s no cause or condition by which sentient beings are defiled, and there’s no cause or condition by which sentient beings are purified.’ Why is that? There are causes and conditions by which sentient beings are defiled, and there are causes and conditions by which sentient beings are purified.
 {:#p9}
 
-10\. The Buddha told the Licchavi Mahānāma, “That Pūraṇa speaks from intellect, which isn’t enough to decide the matter. Thus, Pūraṇa is foolish, undiscerning, and unskillful. He has no cause to say, ‘There’s no cause or condition by which sentient beings are defiled, and there’s no cause or condition by which sentient beings are purified.’ Why is that? There is cause and condition by which sentient beings are defiled, and there’s cause and condition by which sentient beings are purified.
+10\. “Mahānāma, by what causes and conditions are sentient beings defiled, and by what causes and conditions are sentient beings purified? Mahānāma, if form were solely painful, not pleasant, not pleasing, didn’t nurture pleasure, and was free of pleasure, sentient beings wouldn’t become attached to pleasure as a result. Mahānāma, form isn’t solely painful. It’s pleasant, pleasing, nurtures pleasure, and isn’t free of pleasure; therefore, sentient beings have defiled attachment to form. They are bound to it because of that defiled attachment, and they’re vexed because of that bondage.
 {:#p10}
 
-11\. “Mahānāma, by what cause and condition are sentient beings defiled, and by what cause and condition are sentient beings purified? Mahānāma, if form were solely painful, not pleasant, not pleasing, not nurturing pleasure, and free of pleasure, sentient beings wouldn’t become addicted to it as a result. Mahānāma, form isn’t solely painful. It’s pleasant, pleasing, nurtures pleasure, and isn’t free of pleasure; therefore, sentient beings have defiled attachment to form. They are bound to it because of that defiled attachment, and they’re vexed because of that bondage.
+11\. “Mahānāma, if feeling … perception … volition … consciousness was solely painful, not pleasant, not pleasing, didn’t nurture pleasure, and free of pleasure, sentient beings wouldn’t become attached to pleasure as a result. Mahānāma, consciousness isn’t solely painful. It’s pleasant, pleasing, nurtures pleasure, and isn’t free of pleasure; therefore, sentient beings have defiled attachment to consciousness. They are bound to it because of that defiled attachment, and they’re vexed because of that bondage. Mahānāma, this is called the causes and conditions by which sentient beings are defiled.
 {:#p11}
 
-12\. “Mahānāma, if feeling … perception … volition … consciousness were solely painful, not pleasant, not pleasing, not nurturing pleasure, and free of pleasure, sentient beings wouldn’t become addicted to it as a result. Mahānāma, consciousness isn’t solely painful. It’s pleasant, pleasing, nurtures pleasure, and isn’t free of pleasure; therefore, sentient beings have defiled attachment to consciousness. They are bound to it because of that defiled attachment, and they’re vexed because of that bondage. Mahānāma, this is called the cause and condition by which sentient beings are defiled.
+12\. “Mahānāma, what’s the cause and condition by which sentient beings are purified? Mahānāma, if form were solely pleasant, not painful, not disagreeable, didn’t nurture pain, and free of pain, sentient beings wouldn’t become disillusioned with form as a result. Mahānāma, form isn’t solely pleasant. It’s painful, disagreeable, nurtures pain, and isn’t free of pain; therefore, sentient beings become disillusioned with form. They don’t enjoy it because of that disillusionment, and they’re liberated because of not enjoying it.
 {:#p12}
 
-13\. “Mahānāma, what’s the cause and condition by which sentient beings are purified? Mahānāma, if form were solely pleasant, not painful, not disagreeable, not nurturing pain, and free of pain, sentient beings wouldn’t become disillusioned as a result of form. Mahānāma, form isn’t solely pleasant. It’s painful, disagreeable, nurtures pain, and isn’t free of pain; therefore, sentient beings become disillusioned with form. They’re unhappy with it because of that disillusionment, and they’re liberated because of that unhappiness.
+13\. “Mahānāma, if feeling … perception … volition … consciousness was solely pleasant, not painful, not disagreeable, didn’t nurturing pain, and free of pain, sentient beings wouldn’t become disillusioned with consciousness as a result. Mahānāma, consciousness isn’t solely pleasant. It’s painful, disagreeable, nurtures pain, and isn’t free of pain; therefore, sentient beings become disillusioned with consciousness. They don’t enjoy it because of that disillusionment, and they’re liberated because of not enjoying it. Mahānāma, this is called the causes and conditions by which sentient beings are purified.”
 {:#p13}
 
-14\. “Mahānāma, if feeling … perception … volition … consciousness were solely pleasant, not painful, not disagreeable, not nurturing pain, and free of pain, sentient beings wouldn’t become disillusioned as a result of consciousness. Mahānāma, consciousness isn’t solely pleasant. It’s painful, disagreeable, nurtures pain, and isn’t free of pain; therefore, sentient beings become disillusioned with consciousness. They are unhappy with it because of that disillusionment, and they’re liberated because of that unhappiness. Mahānāma, this is called the cause and condition by which sentient beings are purified.”
+14\. When he heard what the Buddha taught, Mahānāma rejoiced and felt glad. He bowed to the Buddha and withdrew.
 {:#p14}
 
-15\. When he heard what the Buddha taught, Mahānāma rejoiced and approved. He bowed to the Buddha and withdrew.
-{:#p15}
+###### Summary Verse
+
+* {:.verse}[126] Knowing Dharma, [127] heavy burden,\\
+[128] Opportunity, ([129] difference,) [130] examination, [131] desire,\\
+[132] Growth, [133-6] a brief teaching,\\
+[137] Dharma seal, and [138] Pūraṇa.
 
 ### Notes
 
 1. {:#n1} This sūtra is parallel with [SN 22.60](https://suttacentral.net/sn22.60){:target="_blank"}. [\[back\]](#ref1)
+2. {:#n2} Ch. 摩訶男. This is the common transliteration for the disciple Mahānāma, but this is not the same person. In SN 22.60, his name is Mahāli. [\[back\]](#ref2)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 6 December 2020
+Last Revised: 6 April 2021
 {: .revised}
 
 ---
