--- a/01_agama/samyukta/01/SA1_145.md
+++ b/01_agama/samyukta/01/SA1_145.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 145. The Aggregates Are Empty'
+title: 'The Related Discourses | 1. The Aggregates | 145. Not Self'
 type: kramdown
 base: ../../../
 previous: SA1_143.html
@@ -9,12 +9,12 @@ next: SA1_146.html
 
 # [The Related Discourses](../index.html)
 ## [1. The Aggregates](index.html)
-### 145. The Aggregates Are Not Self
+### 145. Not Self
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “Form is not self. If form were self, it wouldn’t be that illness and pain arise from form, and there wouldn’t be the desires: ‘Let form be this way,’ or ‘let it not be this way.’ It’s because form is without self that there’s illness and pain that arise from form, and these desires are possible: ‘Let form be this way’ or ‘let it not be this way.’ *Feeling, perception, volition, and consciousness are likewise.*
+2\. It was then that the Bhagavān addressed the monks, “Form is not the self. If form were the self, it wouldn’t be that illness and pain arise from form, and there wouldn’t be the desire about form: ‘Let it be so; let it not be so.’ It’s because form is without self that there’s illness and pain that arise from it, and these desires are possible: ‘Let it be so; let it not be so.’ *Feeling, perception, volition, and consciousness are likewise.*
 {:#p2}
 
 3\. “Monks, what do you think? Is form permanent, or is it impermanent?”
@@ -27,15 +27,15 @@ The monks said to the Buddha, “Impermanent, Bhagavān.”
 
 The monks said to the Buddha, “It’s painful, [7c] Bhagavān.”
 
-5\. “If it’s impermanent and painful, it’s something that changes. Would a well-versed noble disciple see self, something other than self, or both in it?”
+5\. “If it’s impermanent and painful, it’s liable to change. Would well-versed noble disciples see this as a self, what’s other than self, or either of them present in the other?”
 {:#p5}
 
 The monks said to the Buddha, “No, Bhagavān.”
 
-6\. “*Feeling, perception, volition, and consciousness are likewise.* Therefore, monks, all forms that exist in the past, future, or present, whether they are internal or external, crude or fine, lovely or ugly, and far or near, are not self, not other than self, and not both. Observe them in this way. *Feeling, perception, volition, and consciousness are likewise.*
+6\. “*Feeling, perception, volition, and consciousness are likewise.* Therefore, monks, whatever forms exist, whether past, future, or present, internal or external, crude or fine, beautiful or ugly, and distant or near, they are all not self, not other than to self, nor are either of them present in the other. Observe it in this way. *Feeling, perception, volition, and consciousness are likewise.*
 {:#p6}
 
-7\. “Monks, a well-versed noble disciple observes as it really is that what’s in these five acquired aggregates is not self and doesn’t belong to self. After observing this as it really is, they grasp nothing from all the world. Because they grasp nothing, they attach to nothing. Because they attach to nothing, they awaken themselves to nirvāṇa: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
+7\. “Monks, well-versed noble disciples truly observe that what’s in these five acquired aggregates is not self and doesn’t belong to self. After truly observing this, they grasp nothing from all the world. Because they grasp nothing, they attach to nothing. Because they attach to nothing, they realize nirvāṇa for themselves: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
 {:#p7}
 
 8\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
@@ -43,13 +43,13 @@ The monks said to the Buddha, “No, Bhagavān.”
 
 ### Notes
 
-1. {:#n1} This sūtra appears to be a generic version of the next sutra, which is the famous second sermon that the Buddha taught. It’s parallel with [SN 22.59](https://suttacentral.net/sn22.59){:target="_blank"} and [T102](../alternates/T102.html). [\[back\]](#ref1)
+1. {:#n1} This sutra is a slightly different version of [SĀ 1.143](SA1_143.html) and [1.146](SA1_146.html) and parallel to [SN 22.59](https://suttacentral.net/sn22.59){:target="_blank"} and [T102](../alternates/T102.html). [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 5 October 2020
+Last Revised: 6 April 2021
 {: .revised}
 
 ---
