--- a/01_agama/samyukta/01/SA1_146.md
+++ b/01_agama/samyukta/01/SA1_146.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 146. The Aggregates Are Empty (2)'
+title: 'The Related Discourses | 1. The Aggregates | 146. Five Monks'
 type: kramdown
 base: ../../../
 previous: SA1_145.html
@@ -9,12 +9,12 @@ next: SA1_147.html
 
 # [The Related Discourses](../index.html)
 ## [1. The Aggregates](index.html)
-### 146. The Five Monks
+### 146. Five Monks
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Ṛṣipatana in the Deer Preserve of Bārāṇasī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the other five monks, “Form doesn’t have self. If form had self, it wouldn’t be that illness and pain arise from form, and there wouldn’t be the desires: ‘Let form be this way,’ or ‘let it not be this way.’ It’s because form is without self that there’s illness and pain that arise from form, and these desires are possible: ‘Let form be this way,’ or ‘let it not be this way.’ *Feeling, perception, volition, and consciousness are likewise.*
+2\. It was then that the Bhagavān addressed the other five monks,  “Form doesn’t have self. If form had self, it wouldn’t be that illness and pain arise from form, and there wouldn’t be the desire about form: ‘Let it be so; let it not be so.’ It’s because form is without self that there’s illness and pain that arise from form, and it’s possible to desire of form: ‘Let it be so; let it not be so.’ *Feeling, perception, volition, and consciousness are likewise.*
 {:#p2}
 
 3\. “Monks, what do you think? Is form permanent, or is it impermanent?”
@@ -27,15 +27,15 @@ The monks said to the Buddha, “Impermanent, Bhagavān.”
 
 The monks said to the Buddha, “It’s painful, Bhagavān.”
 
-5\. “If it’s impermanent and painful, it’s something that changes. Would a well-versed noble disciple see self, something other than self, or both in it?”
+5\. “If it’s impermanent and painful, it’s liable to change. Would a well-versed noble disciple see in it a self, what’s other than self, or either of them present in the other?”
 {:#p5}
 
 The monks said to the Buddha, “No, Bhagavān.”
 
-6\. “*Feeling, perception, volition, and consciousness are likewise.* Therefore, monks, all forms that exist in the past, future, or present, whether they are internal or external, crude or fine, lovely or ugly, and far or near,  are not self and don’t belong to self when observed as they really are. *Feeling, perception, volition, and consciousness are likewise.*
+6\. “*Feeling, perception, volition, and consciousness are likewise.* Therefore, monks, all forms that exist in the past, future, or present, whether they are internal or external, crude or fine, beautiful or ugly, and distant or near, they are not self and don’t belong to self when truly observed. *Feeling, perception, volition, and consciousness are likewise.*
 {:#p6}
 
-7\. “Monks, a well-versed noble disciple sees that what’s in these five acquired aggregates is not self and doesn’t belong to self. Observing this, they grasp nothing from all the world. Because they grasp nothing, they attach to nothing. Because they attach to nothing, [8a] they awaken themselves to nirvāṇa: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
+7\. “Monks, well-versed noble disciples see that what’s in these five acquired aggregates is not self and doesn’t belong to self. Observing in this way, they grasp nothing in all the world. Because they grasp nothing, they attach to nothing. Because they attach to nothing, [8a] they realize nirvāṇa for themselves: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
 {:#p7}
 
 8\. After the Buddha spoke this sūtra, the contaminants didn’t arise in those five monks, and their minds were liberated.
@@ -52,7 +52,7 @@ The monks said to the Buddha, “No, Bhagavān.”
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 12 October 2020
+Last Revised: 6 April 2021
 {: .revised}
 
 ---
