--- a/01_agama/samyukta/01/SA1_147.md
+++ b/01_agama/samyukta/01/SA1_147.md
@@ -17,12 +17,12 @@ next: SA1_148.html
 2\. At that time, there were three upright gentlemen who had left home not long before. They were Venerable Aniruddha, Venerable Nandika, and Venerable Kimbila.
 {:#p2}
 
-3\. Knowing what they were thinking in their minds, the Bhagavān instructed them: “Monks, this mind, this reasoning, this consciousness should contemplate this. Don’t contemplate that. Stop this desire, stop this form. Someone who realizes this abides fully. Monks, could there be form that’s permanent, unchanging, and a correct abode?”
+3\. Knowing what they were thinking in their minds, the Bhagavān then instructed them: “Monks, this is mind, this is reasoning, this is consciousness. This should be contemplated. Don’t contemplate that. Stopping this desire and stopping this form, a person fully abides in realization.[\[1\]](#n1){:#ref1} Monks, could there be form that’s permanent, unchanging, and a correct abode?”
 {:#p3}
 
 The monks said to the Buddha, “No, Bhagavān.”
 
-4\. The Buddha told the monks, “Good, good! Forms are impermanent and subject to change. Tiring of and parting with desire for them, they cease, become tranquil, and disappear. Thus, since the distant past, all forms have been impermanent, painful, and subject to change. Known in this way, the conditioning of those forms produces the contaminants, which are harmful, burning, and grievous. Stop and cease them all. Once they are stopped and ceased, there’s no attachment. Once there’s no attachment, you’ll live in well-being. Once you live in well-being, you’ll attain parinirvāṇa. Feelings, perceptions, volitions, and consciousness are likewise.”
+4\. The Buddha told the monks, “Good, good! Form is impermanent and liable to change. Tiring and parting with desire [for form], it ceases, becomes tranquil, and disappears. Thus, since the distant past, all forms have been impermanent, painful, and liable to change. Known in this way, the conditioning of those forms produces the contaminants, which are harmful, burning, and grievous. Destroy them all. Once they are destroyed, there’s no attachment. Once there’s no attachment, you’ll live in well-being. Once you live in well-being, you’ll attain parinirvāṇa. *Feeling, perception, volition, and consciousness are likewise.*”
 {:#p4}
 
 5\. When the Buddha spoke this sūtra, those three upright men didn’t produce the contaminants, and their minds were liberated.
@@ -31,11 +31,15 @@ The monks said to the Buddha, “No, Bhagavān.”
 6\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
 {:#p6}
 
+### Notes
+
+1. {:#n1}*fully abides in realization.* Ch. 作證具足住. In SĀ 1.61, 1.154 et al, this is a synonym for liberation from rebirth. The expression “fully abide” is also used for attaining each of the four dhyānas in SĀ 4.10, 6.5, et al. [\[back\]](#ref1)
+
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 12 October 2020
+Last Revised: 6 April 2021
 {: .revised}
 
 ---
