--- a/01_agama/samyukta/01/SA1_148.md
+++ b/01_agama/samyukta/01/SA1_148.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 148. Sixteen Monks'
+title: 'The Related Discourses | 1. The Aggregates | 148. Sixteen Who Were Liberated'
 type: kramdown
 base: ../../../
 previous: SA1_147.html
@@ -9,7 +9,7 @@ next: SA1_149.html
 
 # [The Related Discourses](../index.html)
 ## [1. The Aggregates](index.html)
-### 148. Sixteen Monks
+### 148. Sixteen Who Were Liberated
 
 1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at the Umbrella Mango Tree Park on the bank of the Bhadra River in Mathurā.
 {:#p1}
@@ -17,23 +17,23 @@ next: SA1_149.html
 2\. It was then that the Bhagavān addressed the monks, “Stand on your own island and on your own support. Stand on the island of the teaching and the support of the teaching, not on another island or another support.
 {:#p2}
 
-3\. “Monks, you should correctly examine, ‘Stand on your own island and on your own support. Stand on the island of the teaching and the support of the teaching, not on another island or another support.’ What causes grief, sorrow, vexation, and suffering to arise? What do they possess? What do they cause? What do they tie together? How do you yourself examine the arising of grief, sorrow, vexation, and suffering that have yet to arise and the growth of grief, sorrow, vexation, and suffering that have already arisen?”
+3\. “Monks, you should correctly examine this while standing on your own island and on your own support. Stand on the island of the teaching and the support of the teaching, not on another island or another support. What cause gives rise to grief, sorrow, vexation, and suffering? How do they exist? What do they cause? Why are they attachments? How do you yourself examine the arising of grief, sorrow, vexation, and suffering that have yet to arise and the growth of grief, sorrow, vexation, and suffering that have already arisen?”
 {:#p3}
 
-The monks said to the Buddha, “The Bhagavān is the Dharma root, the Dharma eye, and the Dharma support. Please, let him explain this. After listening, the monks will approve of what was said.”
+The monks said to the Buddha, “The Bhagavān is the Dharma root, the Dharma eye, and the Dharma support. Please explain this. After listening, the monks will approve of what’s said.”
 
-4\. The Buddha told [8b] the monks, “Listen closely, and well consider it. I will explain it for you. Monks, they have form, they cause form, and they tie together forms when you yourself examine the arising of grief, sorrow, vexation, and suffering that have yet to arise and the growth of grief, sorrow, vexation, and suffering that have already arisen. Feelings, perceptions, volitions, and consciousness are likewise. Monks, could it be that form is permanent, eternal, unchanging, and a correct abode?”
+4\. The Buddha told [8b] the monks, “Listen closely, and well consider it. I will explain it for you. Monks, there is form, they cause form, and they are tied to form when one examines for themselves the arising of grief, sorrow, vexation, and suffering that have yet to arise and the growth of grief, sorrow, vexation, and suffering that have already arisen. Feelings, perceptions, volitions, and consciousness are likewise. Monks, could it be that form is permanent, eternal, unchanging, and a correct abode?”
 {:#p4}
 
 They replied, “No, Bhagavān.”
 
-5\. The Buddha told the monks, “Good, monks! Good! Forms are impermanent. Suppose good sons know that forms are impermanent, painful, and changing. Parting with desire for them, they cease, become tranquil, and disappear. After knowing that, since the distant past, all forms have been things that are impermanent, painful, and subject to change, then when forms are the causes and conditions giving rise to grief, sorrow, vexation, and suffering, those good sons will stop them. Having stopped them, they’ll attach to nothing. Not being attached, they’ll live in well-being. Once they live in well-being, that’s called nirvāṇa. Feelings, perceptions, volitions, and consciousness are likewise.”
+5\. The Buddha told the monks, “Good, monks! Good! Form is impermanent. Suppose good sons know that form is impermanent, painful, and changing. Parting with desire for them, they cease, become tranquil, and disappear. After knowing that all forms have been impermanent, painful, and liable to change since the distant past, then those good sons will stop form when it’s the cause and condition giving rise to grief, sorrow, vexation, and suffering. Having stopped them, they’ll attach to nothing. Being detached, they’ll live in well-being. Once they live in well-being, that’s called nirvāṇa. *Feelings, perceptions, volitions, and consciousness are likewise.*”
 {:#p5}
 
 6\. When the Buddha spoke this sūtra, the contaminants didn’t arise in 16 monks, and their minds were liberated.
 {:#p6}
 
-7\. After the Buddha had spoken this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
+7\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
 {:#p7}
 
 ###### Summary Verse
@@ -44,13 +44,13 @@ They replied, “No, Bhagavān.”
 
 ### Notes
 
-1. {:#n1} This sūtra is parallel with [SN 22.43](https://suttacentral.net/sn22.43){:target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} This sūtra is parallel with [SN 22.43](https://suttacentral.net/sn22.43){:target="_blank"}. Note that the analysis of form differs from that of the Pali, and there’s no mention of 16 monks. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 13 October 2020
+Last Revised: 6 April 2021
 {: .revised}
 
 ---
