--- a/01_agama/samyukta/01/SA1_150.md
+++ b/01_agama/samyukta/01/SA1_150.md
@@ -14,16 +14,16 @@ next: SA1_151.html
 1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “Worldly people of lowly occupations search in various ways for wealth and livelihood, and they obtain their fortunes. Worldly people all know this. According to what’s known by worldly people, I likewise speak. Why is that? I’m not set apart from worldly people.
+2\. It was then that the Bhagavān addressed the monks, “Worldly people of lowly occupations search in various ways for wealth and livelihood, and they obtain their fortunes. Worldly people all know this. According to how something is known to worldly people, I also thus speak. Why is that? It doesn’t set me apart from worldly people.
 {:#p2}
 
-3\. “Monks, take for example a vessel that’s in a person’s dwelling, which is called a ghaṭī. Some call it a pātra, some call it a pipīla, some call it a jvāla, some call it a vasiṣṭha, some call it a vacana, and some call it a sarayu.[\[2\]](#n2){:#ref2} However they know it, I speak of it that way. Why is that? It doesn’t set me apart from worldly people.
+3\. “Monks, take for example a vessel in a person’s dwelling is called a ghaṭī. Some call it a pātra, some call it a pipīla, some call it a jvāla, some call it a vistha, some call it a vacana, and some call it a śarāva.[\[2\]](#n2){:#ref2} However they know it, I also thus speak. Why is that? It’s so I’m not set apart from worldly people.
 {:#p3}
 
-4\. “Thus, monks, there’s a mundane rule of the world that I myself know and realize and that I discern, explain, and demonstrate for people. Knowing and seeing it, I say that the world is blind, without eyes, and doesn’t know or see it. How am I like the world that’s blind, without eyes, and doesn’t know or see it?
+4\. Thus, monks, there’s a mundane rule of the world that I myself know and realize and that I discern, explain, and demonstrate for people. Knowing and seeing it, I say: ‘The world is blind, without eyes, and doesn’t know or see it.’ How am I like the world that’s blind, without eyes, and doesn’t know or see it?
 {:#p4}
 
-5\. “Monks, what is the mundane rule of the world that I myself know and realize … doesn’t know or see it? Form is impermanent, painful, and subject to change. This is the mundane rule of the world. Feeling … perception … volition … consciousness is impermanent, painful, and subject to change. This is the mundane rule of the world. Monks, this is called the mundane rule of the world that I myself know and see … for people who are blind, without eyes, and don’t know or see it. How am I like them?”
+5\. “Monks, what is the mundane rule of the world that I myself know and realize … doesn’t know or see it? Form is impermanent, painful, and liable to change. This is the mundane rule of the world. Feeling … perception … volition … consciousness is impermanent, painful, and liable to change. This is the mundane rule of the world. Monks, this is called the mundane rule of the world that I myself know and see … How am I like those who are blind, without eyes, and don’t know or see it?”
 {:#p5}
 
 6\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
@@ -31,20 +31,22 @@ next: SA1_151.html
 
 ### Notes
 
-1. {:#n1} This sutra is parallel with [SA 1.149](SA1_149.html){:target="_blank"} and [SN 22.94](https://suttacentral.net/sn22.94){:target="_blank"}. [\[back\]](#ref1)
-2. {:#n2} These Sanskrit names are all obscure transliteration in Chinese; however, Chinese glossaries do help us with making educated guesses even if they seem outlandish as names of vessels.\\
-*Ghati* was a water jar, apparently used for time-keeping because it became the name for clocks in India.\\
-*Pipīla* is the Skt. name of an ant, and a Chinese glossary (T2130.1032c16) claims the transliteration here means a flying insect.\\
-*Jvāla*: A Chinese glossary (T2130.987a12) says that this transliteration means “light.” Jvāla seems closest to the Chinese; however, rucā is another possibility if the Chinese characters are transposed.\\
-*vasiṣṭha*: T2130.987a13 says the Chinese here is equivalent to a more well-known transliteration for vasiṣṭha, which was the name of the great brahmin sage, and translates the term as “highest.”\\
-*Vacana*: T2130.987a14 offers an alternative transliteration and translates the term as “speech.”\\
-*Sarayu*: For this transliteration, the only clue that can be found is that the same transliteration is used in T1543.772b12 for the river Sarayu, but it only has the first two syllables (as early and middle Chinese transliterations often do). [\[back\]](#ref2)
+1. {:#n1} This sutra is parallel with a passage in [MN 139](https://suttacentral.net/mn139){:target="_blank"} on local dialects, [SĀ 1.149](SA1_149.html){:target="_blank"} and [SN 22.94](https://suttacentral.net/sn22.94){:target="_blank"}. [\[back\]](#ref1)
+2. {:#n2} These Indic names are all obscure transliteration in Chinese. I’ve consulted suggestions in a classical Chinese glossary (T2130 翻梵語), which reads the transliterations as Skt., but I notice that the parallel passage in MN 139 appears to be a better guide for reconstructing several of these terms. A couple are still a mystery to me.\\
+*ghaṭī.* Ch. 揵茨. This was a water jar, apparently used for timekeeping because it became the name for clocks in India.\\
+*pātra*. Ch. 鉢. Skt. pātra, P. patta. This is the Chinese translation of the Buddhist alms bowl.\\
+*pipīla*. Ch. 匕匕羅. Skt. pipīla? This is the Skt. name of an ant. The Chinese glossary (T2130.1032c16) claims the transliteration means a flying insect. Perhaps a word derived from an equivalent of P. pivati that meant something to do with drinking (cups, bowls, etc.). In MN 139, we see the term P. pisīlava instead.\\
+*jvāla*. Ch. 遮留. Skt. Jvāla? The Chinese glossary (T2130.987a12) says that the transliteration means “light” (光). Jvāla seems closest to the Chinese; however, rucā is another possibility if the characters are transposed. Neither option seems appropriate for the name of a vessel, but I’ve no other clues as this point.\\
+*vistha*. Ch. 毘悉多, Skt. vista or vistha. The glossary (T2130.987a13) offers a more well-known transliteration (婆私吒) for vasiṣṭha and translates the term as “highest” (最勝). However, the passage in MN 139 has P. vitta, which means possessions or property in general, but P. vittha means a drinking bowl. I’ve adopted the Skt. equivalent.\\
+*vacana*. Ch. 婆闍那, Skt. vacana. The glossary (T2130.987a14) offers an alternative transliteration (婆遮那) and translates the term as “speech” (語). Here, again, I haven’t discovered another option that may have been a common name of a vessel.\\
+*śarāva*. Ch. 薩牢, MCh. “sa-lau”, Skt. śarāva. In MN 139, one of the items in the list is P. sarāva, meaning a “plate, cup, saucer” depending on the source. I’ve adopted the Skt. equivalent.
+ [\[back\]](#ref2)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 1 November 2020
+Last Revised: 7 April 2021
 {: .revised}
 
 ---
