--- a/01_agama/samyukta/01/SA1_151.md
+++ b/01_agama/samyukta/01/SA1_151.md
@@ -14,39 +14,41 @@ next: SA1_152.html
 1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “There are five kinds of seeds. What are the five? They are root seeds, stem seeds, joint seeds, seeds that fall naturally, and fruit seeds. [Suppose] these five seeds aren’t split, damaged, spoiled, or blown away, [9a] being newly grown, firm, and substantial. When there’s earth element but no water element, those seeds won’t grow and expand. Suppose those seeds are newly grown, firm, and substantial, and they aren’t split, damaged, or blown away. When there’s water element but no earth element, those seeds won’t grow and expand, either. Suppose those seeds are newly grown, firm, and substantial, and they aren’t split, damaged, spoiled, or blown away. When there’s both earth element and water element, those seeds will grow and expand.
+2\. It was then that the Bhagavān addressed the monks, “There are five kinds of seeds. What are the five? They are root seeds, stem seeds, joint seeds, seeds that fall naturally, and fruit seeds. These five seeds aren’t split, damaged, spoiled, or blown away. [9a] They are newly ripened, firm, and substantial. When there’s earth element but no water element, those seeds won’t grow and expand. Suppose those seeds are newly ripened, firm, and substantial, and they aren’t split, damaged, or blown away. When there’s water element but no earth element, those seeds won’t grow and expand, either. Suppose those seeds are newly ripened, firm, and substantial, and they aren’t split, damaged, spoiled, or blown away. When there’s both earth element and water element, those seeds will grow and expand.
 {:#p3}
 
-4\. “Monks, those five seeds are analogous to the acquired aggregates together with consciousness. The earth element is like the four abodes of consciousness. The water element is like the greed and delight of the four acquired substrates and abodes of consciousness. What are the four? Consciousness abides in form and has form as its substrate. Soaked with delight and greed, it grows and expands. Consciousness abides in feeling … perception … volition and has feeling … perception … volition as its substrate. Soaked with greed and delight, it grows and expands. Monks, consciousness [abides] in them, whether it’s future or past, abiding or disappearing, or growing and expanding.
+3\. “Monks, those five seeds are analogous to the acquired aggregates together with consciousness. The earth element is like the four abodes of consciousness. The water element is like the greed and delight of consciousness abiding the four acquired substrates.[\[2\]](#n2){:#ref2} What are the four? Consciousness abides in form and has form as its substrate. Soaked with delight and greed, it grows and expands. Consciousness abides in feeling … perception … volition and has feeling … perception … volition as its substrate. Soaked with greed and delight, it grows and expands. Monks, consciousness [abides] in them, whether in the future or past or it’s abiding, disappearing, or growing and expanding.
+{:#p3}
+
+4\. “Monks, suppose consciousness exists apart from form, feeling, perception, and volition, whether in the future or past or it’s abiding or arising. It would exist only as an assertion. Asking that question and not knowing this will increase one’s delusion because it’s something that’s impossible.[\[3\]](#n3){:#ref3}
 {:#p4}
 
-5\. “Monks, suppose consciousness exists apart from form, feeling, perception, and volition, whether it’s future, past, abiding, or arising. It would exist only as an assertion. Having asked that question, not knowing increases delusion because it’s not possible.
+5\. “Part with greed for the element of form. After someone parts with that greed, their mental involvement  with form that produces bondage produced is ended. After that, the substrate [of form] is ended. After the substrate is ended, consciousness has nowhere to dwell, and it doesn’t continue to grow and expand.
 {:#p5}
 
-6\. “Part with greed for the element of form. After you’ve parted with greed, the bondage produced by the mental block of form is ended. After the bondage produced by the mental block of form ends, then it ends as a substrate [for consciousness]. After it ends as a substrate, consciousness has nowhere to dwell; it doesn’t continue to grow and expand.
+6\. “Part with greed for the element of feeling … perception … volition. After someone parts with that greed, their mental involvement with volition that produces bondage is ended. After that, the substrate [of volition] is ended. After the substrate is ended, consciousness has nowhere to dwell, and it doesn’t continue to grow and expand.
 {:#p6}
 
-7\. “Part with greed for the element of feeling … perception … volition. After you’ve parted with greed, the bondage produced by the mental block of volition is ended. After the bondage produced by the mental block of volition ends, it ends as a substrate [for consciousness]. After it ends as a substrate, that consciousness has nowhere to dwell; it doesn’t continue to grow and expand.
+7\. “Because it doesn’t grow, volitions aren’t created. Once volitions aren’t created, then one abides. Once one is abiding, they are satisfied. Once they’re satisfied, they’re liberated. Once they’re liberated, they grasp nothing and attach to nothing in all the world. Once they grasp nothing and attach to nothing, they realize nirvāṇa for themselves: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’
 {:#p7}
 
-8\. “Because it doesn’t grow, volitions aren’t created. Once volitions aren’t created, then you abide. Once you’re abiding, you are satisfied. Once you’re satisfied, you’re liberated. Once you’re liberated, you grasp nothing and attach to nothing in all the world. Once you grasp nothing and attach to nothing, you yourself realize nirvāṇa: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’
+8\. “I say that that consciousness doesn’t go east, west, south, north, to the four counterpoints, up, or down. There’s no destination to which it goes. When it’s about to enter nirvāṇa, it’s truly ceased, quenched, and purified in the present life.”
 {:#p8}
 
-9\. “I say that that consciousness doesn’t go east, west, south, north, to the four counterpoints, up, or down. There’s no destination whence it goes. When it’s about to enter nirvāṇa, it’s completely ceased, quenched, purified, and true in the present life.”
+9\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
 {:#p9}
-
-10\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
-{:#p10}
 
 ### Notes
 
 1. {:#n1} This sūtra is parallel with [SN 22.54](https://suttacentral.net/sn22.54){:target="_blank"}. [\[back\]](#ref1)
+2. {:#n2} *four acquired substrates*. Ch. 四取攀緣. 攀緣 is parallel with P. ārammaṇa and Skt. ārambaṇa, which means a support or basis for something. The Chinese, however, suggests a verbal meaning “climbing conditions” or “climbing on something,” evoking the image of vines climbing walls and fences. I take the intended meaning to be like the English “substrate” as something in which things grow. The metaphor of water and earth as the substrates for plant growth seems to impart this meaning. [\[back\]](#ref2)
+3. {:#n3} *something that’s impossible*. Ch. 非境界, Skt. anārambaṇa. Literally, the word means “not a support,” used to mean something that’s not an actual thing outside of the human imagination.[\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 1 November 2020
+Last Revised: 7 April 2021
 {: .revised}
 
 ---
