--- a/01_agama/samyukta/01/SA1_152.md
+++ b/01_agama/samyukta/01/SA1_152.md
@@ -1,37 +1,37 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 152. Blockage'
+title: 'The Related Discourses | 1. The Aggregates | 152. Involvement'
 type: kramdown
 base: ../../../
 previous: SA1_151.html
-next: SA1_158.html
+next: SA1_153.html
 ---
 
 # [The Related Discourses](../index.html)
 ## [1. The Aggregates](index.html)
-### 152. Blockage
+### 152. Involvement
 
-1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta Grove of Śrāvastī.
+1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “Someone blocked isn’t liberated, but when they aren’t blocked, then they are liberated. How is someone blocked and not liberated? Monks, consciousness abides growing on the four acquired aggregates. What are the four? Form blocks the abiding of consciousness. Feeling … perception … volition blocks the abiding of consciousness … because they aren’t its domain, this is called blockage. Therefore, one is not liberated.
+2\. It was then that the Bhagavān addressed the monks, “Someone involved isn’t liberated, but when they aren’t involved, then they are liberated. How is someone involved not liberated? Monks, consciousness abides in its substrates of four acquired aggregates. What are the four? Consciousness abides involved with form. Consciousness abides involved with feeling … perception … volition… *as in SĀ 1.151.5* … because it’s something that’s impossible. This is called someone not being liberated because they are involved.
 {:#p2}
 
-3\. “How is someone who isn’t blocked liberated? Being free of greed for the element of form and being free of greed for the element of feeling … perception … volition … they are quenched and true. This then not being block and liberated.”
+3\. “How is someone who isn’t involved then liberated? Parting with greed for the element of form and parting with greed for the element of feeling … perception … volition … *as in SĀ 1.151.7-9* … quenched in truth. This is someone being liberated because they are not involved.”
 {:#p3}
 
 4\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
-{: #p4}
+{:#p4}
 
 ### Notes
 
-1. {:#n1} This sūtra is parallel with [SN 22.43](https://suttacentral.net/sn22.43){:target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} This sūtra is similar to [SĀ 1.151](SA1_151.html){:target="_blank"} and [SN 22.43](https://suttacentral.net/sn22.43){:target="_blank"} but simpler and with less emphasis on involvement. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 1 November 2020
+Last Revised: 7 April 2021
 {: .revised}
 
 ---
