--- a/01_agama/samyukta/01/SA1_17.md
+++ b/01_agama/samyukta/01/SA1_17.md
@@ -17,13 +17,13 @@ next: SA1_18.html
 2\. It was then that the Bhagavān addressed the monks, “Form is impermanent. Whatever causes and conditions give rise to forms, they are also impermanent. How could forms that arise from impermanent causes and conditions be permanent? Thus, feeling … perception … volition … consciousness is impermanent. Whatever causes and conditions give rise to consciousnesses, they are also impermanent. How could consciousnesses that arise from impermanent causes and conditions be permanent?
 {:#p2}
 
-3\. “Thus, monks, form is impermanent, and feeling … perception … volition … consciousness is impermanent. Something that’s impermanent is painful, something that’s painful is not self, and something that’s not self doesn’t belong to self.
+3\. “Thus, monks, form is impermanent, and feeling … perception … volition … consciousness is impermanent. What’s impermanent is painful, what’s painful is not self, and what’s not self doesn’t belong to self.
 {:#p3}
 
-4\. “Noble disciples who thus observe it are disillusioned with form, and they are disillusioned with feeling … perception … volition … consciousness. Being disillusion, they aren’t happy with [consciousness]. Not being happy with it, [2b] they are liberated. Being liberated, they know and see: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
+4\. “Noble disciples who thus observe become disillusioned with form, and they become disillusioned with feeling … perception … volition … consciousness. Being disillusioned, they don’t enjoy [them]. Not enjoying them, [2b] they are liberated. Being liberated, they know and see: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
 {:#p4}
 
-5\. The monks who heard what the Buddha taught rejoiced and approved.
+5\. When the monks who heard what the Buddha taught, they rejoiced and approved.
 {:#p5}
 
 ### Notes
@@ -33,7 +33,7 @@ next: SA1_18.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 6 December 2020
+Last Revised: 6 April 2021
 {: .revised}
 
 ---
