--- a/01_agama/samyukta/01/SA1_20.md
+++ b/01_agama/samyukta/01/SA1_20.md
@@ -32,6 +32,13 @@ next: SA1_21.html
 7\. When the monks heard what the Buddha taught, they rejoiced and approved.
 {:#p7}
 
+###### Summary Verse
+* {:.verse}[11-14] The past explained in four ways,\\
+[15] Disillusionment and [16] liberation,\\
+[17-18] Two ways of explaining causes and conditions,\\
+[19-20] And two kinds of enjoyment.
+
+
 ### Notes
 1. {:#n1} This sūtra is parallel with [SN 22.27](https://suttacentral.net/sn22.27){:target="_blank"}. [\[back\]](#ref1)
 2. {:#n2} *As a result … realized*. Ch. 隨順覺, Skt. anubodhana. [\[back\]](#ref2)
@@ -40,7 +47,7 @@ next: SA1_21.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 27 March 2021
+Last Revised: 6 April 2021
 {: .revised}
 
 ---
