--- a/01_agama/samyukta/01/SA1_3.md
+++ b/01_agama/samyukta/01/SA1_3.md
@@ -14,10 +14,10 @@ next: SA1_4.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {: #p1}
 
-2\. It was then that the Bhagavān addressed the monks, “You must observe that form is empty. Such observation then is right view. Correctly observing it then gives rise to disillusionment. Being disillusioned, delight and greed [for form] will end. When delight and greed [for form] have ended, that’s said to be the mind’s liberation.
+2\. It was then that the Bhagavān addressed the monks, “You should observe that form is empty. Such observation then is right view. Correctly observing it gives rise to disillusionment. Being disillusioned, delight and greed [for form] will end. When delight and greed [for form] have ended, that’s said to be the mind’s liberation.
 {: #p2}
 
-3\. “Thus observe that feeling … perception … volition … consciousness is empty. Such observation then is right view. Correctly observing it then gives rise to disillusionment. Being disillusioned, delight and greed [for consciousness] will end. When delight and greed [for consciousness] have ended, that’s said to be the mind’s liberation.
+3\. “Thus observe that feeling … perception … volition … consciousness is empty. Such observation then is right view. Correctly observing it gives rise to disillusionment. Being disillusioned, delight and greed [for consciousness] will end. When delight and greed [for consciousness] have ended, that’s said to be the mind’s liberation.
 {:#p3}
 
 4\. “Thus, monks, someone wanting to realize the mind's liberation for themselves then can realize it: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
@@ -33,7 +33,7 @@ next: SA1_4.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 19 December 2020
+Last Revised: 6 April 2021
 {: .revised}
 
 ---
