--- a/01_agama/samyukta/01/SA1_42.md
+++ b/01_agama/samyukta/01/SA1_42.md
@@ -22,42 +22,42 @@ next: SA1_138.html
 
 Śāriputra said, “Sir, you may ask. I’ll answer with that I know.”
 
-4\. Mahākauṣṭhila then asked Śāriputra, “If a monk who has yet to attain direct realization wishes to pursue direct realization, what method does he pursue? What teaching does he contemplate?”
+4\. Mahākauṣṭhila then asked Śāriputra, “If a monk who has yet to attain direct realization wishes to pursue it, what method does he pursue? What teaching does he contemplate?”
 {:#p4}
 
-Śāriputra replied, “If a monk who has yet to attain direct realization wants to pursue direct realization, he diligently contemplates this: ‘The five acquired aggregates are illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self.’ Why is that? Because it’s appropriate for his situation. If a monk diligently contemplates these five acquired aggregates, he’ll realize the fruit of stream entry.”
+Śāriputra replied, “If a monk who has yet to attain direct realization wants to pursue it, he diligently contemplates this: ‘The five acquired aggregates are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self.’ Why is that? Because it’s appropriate for his situation. If a monk diligently contemplates the five acquired aggregates, he’ll realize the fruit of stream entry.”
 
-5\. Mahākauṣṭhila also asked, “Śāriputra, suppose he wants to realize the fruit of once-returning after realizing the fruit of stream entry. What teaching should he contemplate?”
+5\. Mahākauṣṭhila also asked, “Śāriputra, suppose someone wants to realize the fruit of once-returning after realizing the fruit of stream entry. What teaching should they contemplate?”
 {:#p5}
 
-Śāriputra replied, “Kauṣṭhila, someone who wants to realize the fruit of once-returning after realizing the fruit of stream entry should also diligently contemplate this, ‘The five acquired aggregates are illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self.’ Why is that? Because it’s appropriate for his situation. If a monk diligently contemplates these five acquired aggregates, he’ll realize the fruit of once-returning.”
+Śāriputra replied, “Kauṣṭhila, someone who wants to realize the fruit of once-returning after realizing the fruit of stream entry should also diligently contemplate this: ‘The five acquired aggregates are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self.’ Why is that? Because it’s appropriate for their situation. If a monk diligently contemplates these five acquired aggregates, he’ll realize the fruit of once-returning.”
 
-6\. Mahākauṣṭhila also asked Śāriputra, “Suppose he wants to realize the fruit of non-returning after realizing the fruit of the once-returning. What teaching should he contemplate?”
+6\. Mahākauṣṭhila also asked Śāriputra, “Suppose someone wants to realize the fruit of non-returning after realizing the fruit of once-returning. What teaching should they contemplate?”
 {:#p6}
 
-Śāriputra replied, “Kauṣṭhila, someone who wants to realize the fruit of non-returning after realizing the fruit of once-returning should also diligently contemplate this, ‘The five acquired aggregates are illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self.’ Why is that? Because it’s appropriate for his situation. If a monk diligently contemplates [65c] these five acquired aggregates, he’ll realize the fruit of non-returning.”
+Śāriputra replied, “Kauṣṭhila, someone who wants to realize the fruit of non-returning after realizing the fruit of once-returning should also diligently contemplate this: ‘The five acquired aggregates are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self.’ Why is that? Because it’s appropriate for their situation. If a monk diligently contemplates [65c] these five acquired aggregates, he’ll realize the fruit of non-returning.”
 
-7\. Mahākauṣṭhila also asked Śāriputra, “Suppose he wants to realize the fruit of the arhat after realizing the fruit of non-returning. What teaching should he contemplate?”
+7\. Mahākauṣṭhila also asked Śāriputra, “Suppose someone wants to realize the fruit of the arhat after realizing the fruit of non-returning. What teaching should they contemplate?”
 {:#p7}
 
-Śāriputra replied, “Kauṣṭhila, someone who wants to realize the fruit of the arhat after realizing the fruit of non-returning should also diligently contemplate this, ‘The five acquired aggregates are illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self.’ Why is that? Because it’s appropriate for his situation. If a monk diligently contemplates these five acquired aggregates, he’ll realize the fruit of the arhat.”
+Śāriputra replied, “Kauṣṭhila, someone who wants to realize the fruit of the arhat after realizing the fruit of non-returning should also diligently contemplate this: ‘The five acquired aggregates are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self.’ Why is that? Because it’s appropriate for their situation. If a monk diligently contemplates these five acquired aggregates, he’ll realize the fruit of the arhat.”
 
-8\. Mahākauṣṭhila also asked Śāriputra, “After he attains fruit of the arhat, then what teaching does he contemplate?”
+8\. Mahākauṣṭhila also asked Śāriputra, “What teaching do they contemplate after attaining the fruit of the arhat?”
 {:#p8}
 
-Śāriputra replied, “Mahākauṣṭhila, an arhat also contemplates this, ‘The five acquired aggregates are illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self.’ Why is that? Because he has attained what was yet to be attained, realized what was yet to be realized, and sees the teaching’s abode of happiness.”
+Śāriputra replied, “Mahākauṣṭhila, an arhat also contemplates this: ‘The five acquired aggregates are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self.’ Why is that? Because he has attained what was yet to be attained, realized what was yet to be realized, and sees the teaching’s abode of happiness.”
 
-9\. Those two upright men each heard what was taught, rejoiced, and departed.
+9\. When those two upright men each heard what was taught, they rejoiced and departed.
 {:#p9}
 
 ### Notes
-1. {:#n1} This sūtra is parallel with [SN 22.122](https://suttacentral.net/sn22.122){:target="_blank"}-[123](https://suttacentral.net/sn22.123){:target="_blank"} and EĀ 34.1. [\[back\]](#ref1)
+1. {:#n1} This sūtra is parallel with [SN 22.122](https://suttacentral.net/sn22.122){:target="_blank"}-[123](https://suttacentral.net/sn22.123){:target="_blank"} and EĀ 34.1. Note that the EĀ version matches the Pali in that “direct realization” isn’t mentioned. Instead, the initial question is about an “ethical” monk. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 5 October 2020
+Last Revised: 6 April 2021
 {: .revised}
 
 ---
