--- a/01_agama/samyukta/01/SA1_6.md
+++ b/01_agama/samyukta/01/SA1_6.md
@@ -14,10 +14,10 @@ next: SA1_7.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “When you don’t know, understand, [1b] stop, and become free of desire for form, you can’t stop suffering. Thus, when you don’t know, understand, stop and become free of desire for feeling … perception … volition … consciousness, you can’t stop suffering.
+2\. It was then that the Bhagavān addressed the monks, “When you don’t know or understand form and [1b] don’t stop or become free of desire for it, it’s not possible to stop suffering. Thus, when you don’t know or understand feeling … perception … volition … consciousness and don’t stop or become free of desire for it, it’s not possible to stop suffering.
 {:#p2}
 
-3\. “Monks, if you know, understand, stop, and become free of desire for form, you can stop suffering. Thus, if you know, understand, stop, and become free of desire for feeling … perception … volition … consciousness, you can stop suffering.”
+3\. “Monks, if you know and understand form and stop and become free of desire for it, it’s possible to stop suffering. Thus, if you know and understand feeling … perception … volition … consciousness and end and become free of desire for it, it’s possible to end suffering.”
 {:#p3}
 
 4\. When the monks heard what the Buddha taught, they rejoiced and approved.
@@ -30,7 +30,7 @@ next: SA1_7.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 19 December 2020
+Last Revised: 6 April 2021
 {: .revised}
 
 ---
