--- a/01_agama/samyukta/01/SA1_1.md
+++ b/01_agama/samyukta/01/SA1_1.md
@@ -14,10 +14,10 @@ next: SA1_2.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {: #p1}
 
-2\.It was then that the Bhagavān addressed the monks, “You should observe that form is impermanent. Such observation then is right view.[\[2\]](#n2){:#ref2} Correctly observing it then gives rise to disillusionment. Being disillusioned, delight and greed [for form] will end. When delight and greed [for form] have ended, that’s said to be the mind’s liberation.
+2\. It was then that the Bhagavān addressed the monks, “You should observe that form is impermanent. Such observation then is right view.[\[2\]](#n2){:#ref2} Correctly observing it gives rise to disillusionment. Being disillusioned, delight and greed [for form] will end. When delight and greed [for form] have ended, that’s said to be the mind’s liberation.
 {: #p2}
 
-3\. “Thus, observe that feeling … perception … volition … consciousness is impermanent. Such observation then is right view. Correctly observing it then gives rise to disillusionment. Being disillusioned, delight and greed [for consciousness] will end. When delight and greed [for consciousness] have ended, that’s said to be the mind’s liberation.
+3\. “Thus, observe that feeling … perception … volition … consciousness is impermanent. Such observation then is right view. Correctly observing it gives rise to disillusionment. Being disillusioned, delight and greed [for consciousness] will end. When delight and greed [for consciousness] have ended, that’s said to be the mind’s liberation.
 {:#p3}
 
 4\. “Thus, monks, someone wanting to realize the mind's liberation for themselves then can realize it: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
@@ -28,14 +28,14 @@ next: SA1_2.html
 
 ### Notes
 
-1. {:#n1} This sūtra is parallel with [SN 22.12](https://suttacentral.net/sn22.12){:target="_blank"} and [SN 22.51](https://suttacentral.net/sn22.51){:target="_blank"}. The next three sūtras are variants that follow this template while substituting the other three marks (‘painful,’ ‘empty,’ and ‘not self’) for ‘impermanent.’ [\[back\]](#ref1)
+1. {:#n1} This sūtra is parallel with [SN 22.12](https://suttacentral.net/sn22.12){:target="_blank"} and [SN 22.51](https://suttacentral.net/sn22.51){:target="_blank"}. The next three sūtras are variants that follow this template while substituting the other three marks (“painful,” “empty,” and “not self”) for “impermanent.” [\[back\]](#ref1)
 2. {:#n2} *right view*. Yinshun amends *correct observation* to *right view* in this sūtra citing the nearly identical passages at [SN 22.51](https://suttacentral.net/sn22.51){:target="_blank"} and SĀ 2.1. [\[back\]](#ref2)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 11 November 2020
+Last Revised: 6 April 2021
 {: .revised}
 
 ---
