--- a/01_agama/samyukta/01/SA1_11.md
+++ b/01_agama/samyukta/01/SA1_11.md
@@ -14,10 +14,13 @@ next: SA1_12.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “Past and future form is impermanent, so why wouldn’t present form [be impermanent]? Noble disciples thus observe them, not looking back to past form and not wishing for future form. They tire and become free of desire for present form, being correctly oriented toward its cessation. Thus, past and future feeling … perception … volition … consciousness is impermanent, so why wouldn’t present consciousness [be impermanent]? Noble disciples thus observe them, not looking back to past consciousness and not wishing for future consciousness. They tire and become free of desire for present consciousness, being correctly oriented toward its cessation.”
+2\. It was then that the Bhagavān addressed the monks, “Past and future form is impermanent, so why wouldn’t present form? Noble disciples thus observe them. They don’t look back to past form, don’t wish for future form, and become disillusioned and free of desire for present form. They’re correctly headed toward its complete cessation.
 {:#p2}
 
-3\. The monks who heard what the Buddha taught then rejoiced and approved.
+3\. “Thus, past and future feeling … perception … volition … consciousness is impermanent, so why wouldn’t present consciousness? Noble disciples thus observe them. They don’t look back to past consciousness, don’t wish for future consciousness, and become disillusioned and free of desire for present consciousness. They’re correctly headed toward complete cessation.”
+{:#p3}
+
+4\. When the monks heard what the Buddha taught, they rejoiced and approved.
 {:#p3}
 
 ### Notes
@@ -27,7 +30,7 @@ next: SA1_12.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 19 September 2020
+Last Revised: 6 April 2021
 {: .revised}
 
 ---
