--- a/01_agama/samyukta/01/SA1_149.md
+++ b/01_agama/samyukta/01/SA1_149.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 149. Self'
+title: 'The Related Discourses | 1. The Aggregates | 149. Myself'
 type: kramdown
 base: ../../../
 previous: SA1_148.html
@@ -9,7 +9,7 @@ next: SA1_150.html
 
 # [The Related Discourses](../index.html)
 ## [1. The Aggregates](index.html)
-### 149. Self
+### 149. Myself
 
 1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
@@ -17,7 +17,7 @@ next: SA1_150.html
 2\. It was then that the Bhagavān addressed the monks, “I have no quarrel with the world, but the world quarrels with me. Why is that? Monks, if someone speaks according to the teaching, they don’t have a quarrel with the world. The world’s sages say, ‘That exists,’ and I also say, ‘That exists.’ How is it that the world’s sages say, ‘That exists,’ and I also say, ‘That exists’?
 {:#p2}
 
-3\. “Monks, form is impermanent, painful, and subject to change. The world’s sages say, ‘That exists,’ and I also say, ‘That exists.’ Thus, feeling … perception … volition … consciousness is impermanent, painful, and subject to change. The world’s sages say, ‘That exists,’ and I also say, ‘That exists.’
+3\. “Monks, form is impermanent, painful, and liable to change. The world’s sages say, ‘That exists,’ and I also say, ‘That exists.’ Thus, feeling … perception … volition … consciousness is impermanent, painful, and liable to change. The world’s sages say, ‘That exists,’ and I also say, ‘That exists.’
 {:#p3}
 
 4\. “The world’s sages say, ‘That doesn’t exist,’ and I also say, ‘That doesn’t exist.’ That is, ‘Form is permanent, eternal, unchanging, and a correct abode.’ The world’s sages say, ‘That doesn’t exist,’ and I say, ‘That doesn’t exist.’ ‘Feeling … perception … volition … consciousness is permanent, eternal, unchanging, and a correct abode.’ The world’s sages say, ‘That doesn’t exist,’ and I say, ‘That doesn’t exist.’ This is called the worldly sages saying, ‘That doesn’t exist,’ and myself also saying, ‘That doesn’t exist.’
@@ -26,7 +26,7 @@ next: SA1_150.html
 5\. “Monks, there is a mundane rule of the world that I myself also know and realize, and I discern, explain, and demonstrate it for people. The world is blind, without eyes, and doesn’t know or see it, but it’s not me who is mistaken.
 {:#p5}
 
-6\. “Monks, what is the mundane rule of the world that I myself know and realize [8c] and that I explain, discern, and demonstrate for people who are blind, without eyes, and don’t know or see it? Here, monks, form is impermanent, painful, and subject to change. This is called the mundane law of the world. Thus, feeling … perception … volition … consciousness is impermanent, painful, and subject to change. This is the mundane rule of the world. Monks, this is the mundane rule of the world that I myself know and realize and that I discern, explain, and demonstrate for people who are blind, without eyes, don’t know or see it. How am I like those who are blind, without eyes, and don’t know or see it?”
+6\. “Monks, what is the mundane rule of the world that I myself know and realize [8c] and that I explain, discern, and demonstrate for people who are blind, without eyes, and don’t know or see it? Monks, form is impermanent, painful, and liable to change. This is called the mundane law of the world. Thus, feeling … perception … volition … consciousness is impermanent, painful, and liable to change. This is the mundane rule of the world. Monks, this is the mundane rule of the world that I myself know and realize and that I discern, explain, and demonstrate for people. Those who are blind and without eyes don’t know or see it. How am I like those who are blind, without eyes, and don’t know or see it?”
 {:#p6}
 
 7\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
@@ -34,13 +34,13 @@ next: SA1_150.html
 
 ### Notes
 
-1. {:#n1} This sūtra is parallel with [SN 22.94](https://suttacentral.net/sn22.94){:target="_blank"} and [SA 1.150](SA1_150.html){:target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} This sūtra is parallel with [SN 22.94](https://suttacentral.net/sn22.94){:target="_blank"} and [SĀ 1.150](SA1_150.html){:target="_blank"}. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 1 November 2020
+Last Revised: 6 April 2021
 {: .revised}
 
 ---
