--- a/01_agama/samyukta/01/SA1_15.md
+++ b/01_agama/samyukta/01/SA1_15.md
@@ -14,13 +14,13 @@ next: SA1_16.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “Form is impermanent. What’s impermanent is painful. What’s painful is not self. What’s not self doesn’t belong to self, either. Such an observation is called a true and correct observation. Thus, feeling … perception … volition … consciousness is impermanent. What’s impermanent is painful. What’s painful is not self. What’s not self doesn’t belong to self, either. Such an observation is called a true and correct observation.
+2\. It was then that the Bhagavān addressed the monks, “Form is impermanent. What’s impermanent is painful, what’s painful is not self, and what’s not self doesn’t belong to self, either. Such observation is called a true and correct observation. Thus, feeling … perception … volition … consciousness is impermanent. What’s impermanent is painful, what’s painful is not self, and what’s not self doesn’t belong to self, either. Such an observation is called a true and correct observation.
 {:#p2}
 
-3\. “Noble disciples thus observe and tire of form. They tire of sensation … perception … volition … consciousness. Because they tire of it, they don’t enjoy it. Because they don’t enjoy it, they attain liberation. Liberation gives rise to this true knowledge: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
+3\. “Noble disciples who thus observe become disillusioned with form. They become disillusioned with sensation … perception … volition … consciousness. Because they’re disillusioned, they don’t enjoy them. Because they don’t enjoy them, they attain liberation. For someone who’s liberated, this true knowledge arises: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
 {:#p3}
 
-4\. The monks who heard what the Buddha taught rejoiced and approved.
+4\. When the monks heard what the Buddha taught, they rejoiced and approved.
 {:#p4}
 
 ### Notes
@@ -30,7 +30,7 @@ next: SA1_16.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 19 September 2020
+Last Revised: 6 April 2021
 {: .revised}
 
 ---
