--- a/01_agama/samyukta/01/SA1_172.md
+++ b/01_agama/samyukta/01/SA1_172.md
@@ -12,13 +12,14 @@ next: ../02/index.html
 ### 172. Yamaka
 
 1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
+{:#p1}
 
 #### Yamaka’s Wrong View
 
-2\. It was then that a monk named Yamaka had an evil view occur to him, and he said, “As I understand the Buddha’s teaching, an arhat who has ended the outflows no longer exists after his life ends.”
+2\. It was then that a monk named Yamaka had an evil view occur to him. He said, “As I understand the Buddha’s teaching, an arhat who has ended the contaminants will no longer exist when their body breaks up and their life ends.”
 {:#p2}
 
-3\. There was a group of monks who overheard what he said, and they went and said to that monk Yamaka, “Did you really say, ‘As I understand the Buddha’s teaching, an arhat who has ended the contaminants no longer exists after his life ends’?”
+3\. There was a group of monks who overheard what he said. They went and said to that monk Yamaka, “Did you really say, ‘As I understand the Buddha’s teaching, an arhat who has ended the contaminants will no longer exist when their body breaks up and their life ends’?”
 {:#p3}
 
 He replied, “That’s true, venerables.”
@@ -26,28 +27,28 @@ He replied, “That’s true, venerables.”
 4\. The monks then said to Yamaka, “Don’t slander the Bhagavān. Slandering the Bhagavān isn’t good. The Bhagavān doesn’t say that. You should abandon this evil view.”
 {:#p4}
 
-5\. When the monks said this to him, Yamaka still held to his evil view, and said, “Venerables, only this is the truth; anything else is a falsehood.” He said this three times.
+5\. When the monks said this to him, Yamaka still held to his evil view. He said, “Venerables, only this is the truth; anything else is a falsehood.” He said this three times.
 {:#p5}
 
-6\. Unable to discipline Yamaka, they gave up and left. They went to Venerable Śāriputra and said to him, “Venerable, you should know that the monk Yamaka has had an evil view occur to him. He says, ‘I understand the Bhagavān’s teaching. An arhat who has ended the contaminants no longer exists after his life ends.’ After we heard what he had said, we went and asked the monk Yamaka, ‘Did you really say that you thus know and see?’
+6\. Unable to discipline Yamaka, the monks gave up and left. They went to Venerable Śāriputra and said to him, “Venerable, you should know that the monk Yamaka has had an evil view occur to him. He says, ‘As I understand the Bhagavān’s teaching, an arhat who has ended the contaminants will no longer exist when their body breaks up and their life ends.’ After we heard what he had said, we went and asked the monk Yamaka, ‘Did you really say that you thus know and see?’
 {:#p6}
 
 “He replied to us, ‘Venerables, that’s true. Anything else is foolish talk.’
 
-“We then said, ‘Don’t slander the Bhagavān. The Bhagavān doesn’t say that. You should abandon this evil view.’ We admonished him three times, but still he didn’t abandon this evil view, so we went to you, venerable. Please, venerable, you should convince the monk Yamaka to desist in this evil view out of compassion for him!”
+“We then said, ‘Don’t slander the Bhagavān. The Bhagavān doesn’t say that. You should abandon this evil view.’ We admonished him three times, but still he didn’t abandon this evil view, so we’ve come to you, venerable. Please, venerable, you should convince the monk Yamaka to desist from this evil view out of compassion for him!”
 
-7\. Śāriputra said, “So it is. I will convince him to desist in this evil view.”
+7\. Śāriputra said, “So it is. I will convince him to desist from this evil view.”
 {:#p7}
 
-8\. That group of monks rejoiced and felt glad when they heard Śāriputra say this, and then they returned to their abodes.
+8\. That group of monks rejoiced and felt glad when they heard Śāriputra say this. They then returned to their abodes.
 {:#p8}
 
 #### Śāriputra Convinces Yamaka
 
-9\. The Venerable Śāriputra then put on his robe and took his robe into Śrāvastī to solicit alms early in the morning. After he ate, he left the city. After he returned to the monastery and put away his robes and bowl, he paid a visit to the monk Yamaka. When Yamaka saw Venerable Śāriputra coming from afar, he prepared a seat and washed his feet. Finished with his feet, he went out to receive [his guest], taking his robe and bowl, and asked him to prepare his seat.
+9\. The Venerable Śāriputra then put on his robe and took his bowl into Śrāvastī to solicit alms early in the morning. After he ate, he left the city. Upon returning to the monastery, he put away his robes and bowl and paid a visit to the monk Yamaka. When Yamaka saw Venerable Śāriputra coming from a distance, he prepared a seat and washed his feet. Finished with his feet, he went out to receive [his guest], taking his robe and bowl, and invited him to prepare a seat for himself.
 {:#p9}
 
-10\. After he had prepared his seat and washed his feet, Śāriputra said to the monk Yamaka, “Do you really say, ‘I understand the Bhagavān’s teaching. An arhat who has ended the contaminants doesn’t exist when his body breaks up and his life ends’?”
+10\. After he had prepared his seat and washed his feet, Śāriputra said to the monk Yamaka, “Do you really say, ‘As I understand the Bhagavān’s teaching, an arhat who has ended the contaminants won’t exist when his body breaks up and his life ends’?”
 {:#p10}
 
 The monk Yamaka said to Śāriputra, “That’s true, Venerable Śāriputra.”
@@ -62,7 +63,7 @@ He replied, “Venerable Śāriputra, it’s impermanent.”
 
 He replied, “It’s painful.”
 
-13\. Again, he asked, “If it’s impermanent and painful, it’s liable to change. Would a well-versed disciple see in form a self, what’s other than self, or [self and other] present in each other?”
+13\. Again, he asked, “If it’s impermanent and painful, it’s liable to change. Would a well-versed disciple see in form a self, what’s other than self, or either of them present in the other?”
 {:#p13}
 
 He replied, “No, Venerable Śāriputra.”
@@ -79,7 +80,7 @@ He replied, “No, Venerable Śāriputra.”
 
 He replied, “No, Venerable Śāriputra.”
 
-16\. Again, Śāriputra asked, “How is it, Yamaka? Is something other form the Tathāgata? Is something other feeling … perception … volition … consciousness the Tathāgata?”
+16\. Again, Śāriputra asked, “How is it, Yamaka? Is something other than form the Tathāgata? Is something other than feeling … perception … volition … consciousness the Tathāgata?”
 {:#p16}
 
 He replied, “No, Venerable Śāriputra.”
@@ -99,22 +100,22 @@ He replied, “No, Venerable Śāriputra.”
 
 He replied, “No, Venerable Śāriputra.”
 
-20\. “So it is, Yamaka. The Tathāgata sees the teaching that’s true and abides accordingly without obtaining or postulating anything. How can you say, ‘I understand the Bhagavān’s teaching. The arhat who has ended the contaminants doesn’t exist after his body breaks up and his life ends’? Is that timely stated?”
+20\. “So it is, Yamaka. The Tathāgata sees the teaching that’s true and abides according to it without obtaining or postulating anything. How can you say, ‘As I understand the Bhagavān’s teaching, an arhat who has ended the contaminants won’t exist when his body breaks up and his life ends’? Is that an appropriate statement?”[\[2\]](#n2){:#ref2}
 {:#p20}
 
 He replied, “No, Venerable Śāriputra.”
 
-21\. Again, he asked, “Yamaka, before you had said, ‘I understand the Bhagavān’s teaching. The arhat who has ended the contaminants doesn’t exist after his body breaks up and his life ends.’ Would you say that again now, or not?”
+21\. Again, he asked, “Yamaka, you had said before, ‘As I understand the Bhagavān’s teaching, an arhat who has ended the contaminants won’t exist when his body breaks up and his life ends.’ Would you say that again now?”
 {:#p21}
 
-The monk Yamaka said, “Venerable Śāriputra, I didn’t understand and was ignorant before, so I spoke this evil view. After listening to the Venerable Śāriputra explain it, my misunderstanding and ignorance has been completely eliminated.”
+The monk Yamaka said, “Venerable Śāriputra, I didn’t understand and was ignorant before, so I stated this evil view. After listening to the Venerable Śāriputra explain it, my misunderstanding and ignorance has been completely dispelled.”
 
-22\. Again, Śāriputra asked, “Yamaka, if you were asked again, ‘Monk, about that evil view that you spoke before, what do you know and see now that it’s entirely been abandoned?’ How would you answer?”
+22\. Again, Śāriputra asked, “Yamaka, if again you were asked, ‘Monk, about that evil view that you stated before, what do you know and see now that you’ve entirely abandoned it?’ How would you answer?”
 {:#p22}
 
 Yamaka answered, “Venerable Śāriputra, if someone came and asked me that, I would thus answer: ‘The form of an arhat who has ended the contaminants is impermanent. Something that’s impermanent is painful, and what’s painful has become tranquil, cooled, and forever disappeared. His feeling, perception, volition, and consciousness are likewise.’ Were someone to come and ask me that, I would thus answer them.”
 
-23\. Śāriputra said, “Good, Yamaka! Good! You should thus answer them. Why is that? The form of an arhat who has ended the contaminants is impermanent. What’s impermanent is painful. If it’s impermanent and painful, that’s the law of arising and perishing. Sensation, perception, volition, and consciousness are likewise.”
+23\. Śāriputra said, “Good, Yamaka! Good! You should thus answer them. Why is that? The form of an arhat who has ended the contaminants is impermanent. What’s impermanent is painful. If it’s impermanent and painful, it’s something that arises and ceases. Sensation, perception, volition, and consciousness are likewise.”
 {:#p23}
 
 24\. When Venerable Śāriputra explained the teaching, the monk Yamaka parted with dust and defilement, and his Dharma eye was purified.
@@ -122,39 +123,41 @@ Yamaka answered, “Venerable Śāriputra, if someone came and asked me that, I 
 
 #### The Simile of the False Friend
 
-25\. Venerable Śāriputra said to the monk Yamaka, “Now, I will relate to you an analogy, for intelligent people understand things with analogies. It’s like a prominent man’s son. This prominent man’s son was quite wealthy with much property. He searched widely for servants to keep his property guarded.
+25\. Venerable Śāriputra said to the monk Yamaka, “Now, I will relate to you an analogy, for wise people understand things with analogies. Take the example of a prominent man’s son. This prominent man’s son was quite wealthy with much property. He searched widely for servants to keep his property well-guarded.
 {:#p25}
 
-26\. “He had an enemy from a hostile clan who made a pretense to get close to him by becoming his servant. This enemy was always watching for an opportunity late while he was sleeping, when he got up in the morning, or when his servants were on break. Taking great care with his task, he used modest expressions to please his employer so that he’d be perceived as a friend or son. Once he trusted and didn’t doubt that enemy, the employer didn’t take care to protect himself. His enemy then took a sharp knife and ended his life with it.
+26\. “An enemy from a hostile clan made a pretense of becoming his servant to get close to him. This enemy was always watching for an opportunity while he was sleeping at night, when he got up in the morning, or when his servants were on break. He took great care with his mission, acting modest so his employer would be pleased and perceive him as he would a friend or son. The employer didn’t take care to protect himself once he trusted and didn’t doubt that enemy. His enemy then took a sharp knife and ended his life with it.
 {:#p26}
 
-27\. “Yamaka, what do you think? Was that evil enemy the prominent man’s friend? Did he not from the start have a harmful intent, always watching for an opportunity until the end? But that prominent man wasn’t able to realize it, so harm came to him.”
+27\. “Yamaka, what do you think? Was that evil enemy the prominent man’s friend? Did he not have harmful intent from the start, always watching for an opportunity until the end, but that prominent man couldn’t realize it and harm came to him?”
 {:#p27}
 
 He replied, “That’s true, venerable.”
 
-28\. Śāriputra said to the Yamaka, “What do you think? Had that prominent man known from the start that an enemy was pretending to be a friend wanting to harm him, wouldn’t he have protected himself and not come to harm?”
-He replied, “So it is, Venerable Śāriputra.”
+28\. Śāriputra said to the Yamaka, “What do you think? Had that prominent man known from the start that an enemy pretending to be a friend wanted to harm him, wouldn’t he have protected himself and not come to harm?”
 {:#p28}
 
-29\. “Thus, Yamaka, the foolish, unlearned ordinary people perceive permanence, solace, health, self, and what belongs to self in the five acquired aggregates. They preserve and guard these five acquired aggregates, but the five acquired aggregates are enemies that do them harm in the end. Like it was with that prominent man, they are pretend friends that do harm, but people don’t realize it.
+He replied, “So it is, Venerable Śāriputra.”
+
+29\. “Thus, Yamaka, foolish, unlearned ordinary people perceive permanence, solace, health, self, and what belongs to self in the five acquired aggregates. They preserve and guard these five acquired aggregates, but the five acquired aggregates are enemies that do them harm in the end. Like it was with that prominent man, they are pretend friends that do them harm, but people don’t realize it.
 {:#p29}
 
-30\. “Yamaka, well-versed noble disciples observe that these five acquired aggregates are like illnesses, abscesses, thorns, and killers. They’re impermanent, painful, empty, not self, and don’t belong to self. Noble disciples don’t cling to or acquire them. Because they don’t acquire them, they aren’t attached to them. Because they aren’t attached to them, they themselves realize Nirvāṇa: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I’m not subject to a later existence.’”
+30\. “Yamaka, well-versed noble disciples observe that these five acquired aggregates are like illnesses, abscesses, thorns, and killers. They’re impermanent, painful, empty, not self, and don’t belong to self. Noble disciples don’t cling to or acquire them. Because they don’t acquire them, they aren’t attached to them. Because they aren’t attached to them, they themselves realize Nirvāṇa: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
 {:#p30}
 
-31\. When Venerable Śāriputra gave this teaching, the monk Yamaka didn’t produce the contaminants, and his mind was liberated. Venerable Śāriputra then gave the monk Yamaka a teaching that was plain, instructive, illuminating, and joyous, and then he got up from his seat and left.
+31\. When Venerable Śāriputra gave this teaching, the monk Yamaka didn’t produce the contaminants, and his mind was liberated. After Venerable Śāriputra then gave him a teaching that was plain, instructive, illuminating, and joyous, the monk Yamaka got up from his seat and left.
 {:#p31}
 
 ### Notes
 
 1. {:#n1} This sūtra is parallel with [SN 22.85](https://suttacentral.net/sn22.85){:target="_blank"}. [\[back\]](#ref1)
+2. {:#n2} *appropriate statement*. Ch. 時說. Lit. “timely statement.” It’s interesting to note that the Pali parallel uses the expression “kallaṁ … veyyākaraṇaṁ,” where kalla means “fitting;” but if the Indic term were kala, the Chinese translator could have easily understood it as “timely.” [\[back\]](#ref2)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 December 2020
+Last Revised: 7 April 2021
 {: .revised}
 
 ---
