--- a/01_agama/samyukta/01/SA1_18.md
+++ b/01_agama/samyukta/01/SA1_18.md
@@ -14,13 +14,13 @@ next: SA1_19.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “Form is impermanent. Whatever causes and conditions give rise to forms, they are also impermanent. How could forms that arise from impermanent causes and conditions be permanent? Feeling … perception … volition … consciousness is impermanent. Whatever causes and conditions give rise to consciousnesses, they are also impermanent. How could consciousnesses that arise from impermanent causes and conditions be permanent?
+2\. It was then that the Bhagavān addressed the monks, “Form is impermanent. Whatever causes or conditions give rise to forms, they are also impermanent. How could forms that arise from impermanent causes and conditions be permanent? Feeling … perception … volition … consciousness is impermanent. Whatever causes or conditions give rise to consciousness, they are also impermanent. How could consciousness that arises from impermanent causes and conditions be permanent?
 {:#p2}
 
-3\. “Thus, monks, form is impermanent, and feeling … perception … volition … consciousness is impermanent. Something that’s impermanent is painful, something that’s painful is not self, and something that’s not self doesn’t belong to self. Such observation is called true observation.
+3\. “Thus, monks, form is impermanent, and feeling … perception … volition … consciousness is impermanent. What’s impermanent is painful, what’s painful is not self, and what’s not self doesn’t belong to self. Such observation is called true observation.
 {:#p3}
 
-4\. “Noble disciples who thus observe it are liberated from form and liberated from feeling … perception … volition … consciousness. I say that this is equal to being liberated from birth, old age, illness, death, sorrow, lamentation, pain, and vexation.”
+4\. “Noble disciples who thus observe are liberated from form and liberated from feeling … perception … volition … consciousness. I say that this is equal to being liberated from birth, old age, illness, death, sorrow, lamentation, pain, and vexation.”
 {:#p4}
 
 5\. When the monks heard what the Buddha taught, they rejoiced and approved.
