--- a/01_agama/samyukta/01/SA1_8.md
+++ b/01_agama/samyukta/01/SA1_8.md
@@ -14,10 +14,10 @@ next: SA1_9.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “When you don’t know, understand, and become free of desire for form, your mind isn’t liberated. When your mind isn’t liberated, you can’t stop suffering. Thus, when you don’t know, understand, and become free of desire for feeling … perception … volition … consciousness, your mind isn’t liberated, and you can’t stop suffering.
+2\. It was then that the Bhagavān addressed the monks, “When you don’t know or understand form and don’t become free of desire for it, the mind isn’t liberated. When the mind isn’t liberated, it’s not possible to stop suffering. Thus, when you don’t know or understand feeling … perception … volition … consciousness and don’t become free of desire for it, the mind isn’t liberated, and it’s not possible to stop suffering.
 {:#p2}
 
-3\. “Monks, if you know, understand, and become free of desire for form, your mind is liberated, and you can stop suffering. Thus, if you know, understand, and become free of desire for feeling … perception … volition … consciousness, your mind is liberated, and you can [1c] stop suffering.”
+3\. “Monks, if you know and understand form and become free of desire for it, the mind is liberated, and it’s possible to stop suffering. Thus, if you know and understand feeling … perception … volition … consciousness and become free of desire for it, your mind is liberated, and it’s possible to [1c] stop suffering.”
 {:#p3}
 
 4\. When the monks heard what the Buddha taught, they rejoiced and approved.
@@ -30,7 +30,7 @@ next: SA1_9.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 19 December 2020
+Last Revised: 6 April 2021
 {: .revised}
 
 ---
